Fix QR alignment and footer style

--- a/www/resources/default.css
+++ b/www/resources/default.css
@@ -269,99 +269,17 @@ template {
     max-width: 100%;
 }
 
+#loginForm {
+    float: left;
+}
+
 .loginFormUsername {
     text-align: center;
 }
 
-.loginFormRememeberMe {
+.loginFormRememberMe {
     text-align: center;
     padding: 0.5rem;
-}
-
-@media print {
-
-    *,
-    *::before,
-    *::after,
-    p::first-letter,
-    div::first-letter,
-    blockquote::first-letter,
-    li::first-letter,
-    p::first-line,
-    div::first-line,
-    blockquote::first-line,
-    li::first-line {
-        text-shadow: none !important;
-        box-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    #regular_remember_username,
-    #regular_remember_me,
-    #regularsubmit {
-        display: none;
-    }
-
-    abbr[title]::after {
-        content: " ("attr(title) ")";
-    }
-
-    pre {
-        white-space: pre-wrap !important;
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-
-    .navbar {
-        display: none;
-    }
-
-    .badge {
-        border: 1px solid #000;
-    }
-
-    .table {
-        border-collapse: collapse !important;
-    }
-
-    .table td,
-    .table th {
-        background-color: #fff !important;
-    }
-
-    .table-bordered th,
-    .table-bordered td {
-        border: 1px solid #ddd !important;
-    }
 }
 
 html {
@@ -4598,6 +4516,10 @@ only screen and (max-device-width: 480px) {
     h4 {
         font-size: 130%;
         text-align: center;
+    }
+
+    #loginForm {
+        float: none;
     }
 
     #content {
